kubernetes/postiz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postiz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - postiz.pabpereza.dev
      secretName: postiz-tls
  rules:
    - host: postiz.pabpereza.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postiz
                port:
                  number: 80
